Add title attributes to icon links

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <h1 id="title"><span class="bold">Molly</span><br> FitzHarris</h1>
     <h3 id="sub-title">developer</h3>
     <div id="links">
-      <a class="icon" href="https://github.com/mfitzharris"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-      <a class="icon" href="https://www.linkedin.com/in/molly-fitzharris"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
-      <a class="icon" href="https://twitter.com/mollyifitz"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
-      <a class="icon" href="mailto:molly.fitzharris@gmail.com"><i class="fa fa-envelope fa-3x" aria-hidden="true"></i></a>
+      <a class="icon" title="github" href="https://github.com/mfitzharris"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+      <a class="icon" title="linkedin" href="https://www.linkedin.com/in/molly-fitzharris"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
+      <a class="icon" title="twitter" href="https://twitter.com/mollyifitz"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+      <a class="icon" title="email" href="mailto:molly.fitzharris@gmail.com"><i class="fa fa-envelope fa-3x" aria-hidden="true"></i></a>
     </div>
     <button id="enter">ENTER</button>
   </div>
